--- a/src/app/componentes/menu/menu.component.html
+++ b/src/app/componentes/menu/menu.component.html
@@ -1,11 +1,13 @@
-<ul id="menu">
-    <li class="item" routerLinkActive="activo">
-        <a routerLink="palabras">Palabras</a>
-    </li>
-    <li class="item" routerLinkActive="activo">
-        <a routerLink="frases">Frases</a>
-    </li>
-    <li class="item" routerLinkActive="activo">
-        <a routerLink="expresiones">Expresiones</a>
-    </li>
-</ul>
+<div id="menu">
+    <div class="container items">
+        <div class="item" routerLinkActive="activo">
+            <a routerLink="palabras">Palabras</a>
+        </div>
+        <div class="item" routerLinkActive="activo">
+            <a routerLink="frases">Frases</a>
+        </div>
+        <div class="item" routerLinkActive="activo">
+            <a routerLink="expresiones">Expresiones</a>
+        </div>
+    </div>
+</div>
