[ Buscador ] » Estilos actualizados

--- a/src/app/componentes/expresiones/expresiones.component.html
+++ b/src/app/componentes/expresiones/expresiones.component.html
@@ -9,7 +9,10 @@
     
     <ng-container *ngIf="expresiones.length > 0">
     
-        <input class="buscador" type="text" placeholder="Buscar">
+        <div class="entrada">
+            <input class="buscador" type="text" placeholder="Buscar">
+            <i class="icono fa fa-search" aria-hidden="true"></i>
+        </div>
         
         <div class="elemento" *ngFor="let expresion of expresiones; let i = index">
             <div class="ingles">{{ expresion.ingles }}</div>
