--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,9 +10,9 @@ $desktop: 1200px;
 
 // Placeholder
 
-::-webkit-input-placeholder { color: $lightprimary }
-     :-ms-input-placeholder { color: $lightprimary }
-              ::placeholder { color: $lightprimary }
+::-webkit-input-placeholder { color: rgba(25,155,255,.5) }
+     :-ms-input-placeholder { color: rgba(25,155,255,.5) }
+              ::placeholder { color: rgba(25,155,255,.5) }
 
 // ─────────────── //
 //     GENERAL     //
@@ -31,7 +31,7 @@ h1 {
 
 hr {
     display: block;
-    border-color: $lightprimary;
+    border-color: rgba(25,155,255,.25);
     margin-bottom: 50px;
 }
 
@@ -43,7 +43,7 @@ hr {
 }
 
 // ────────────── //
-//     COMMON     //
+//     SHARED     //
 // ────────────── //
 
 .nuevo {
@@ -72,29 +72,36 @@ hr {
     }
 }
 
-footer {
-    color: rgba(255,255,255,.75);
-    font-size: 10px;
-    font-weight: 400;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    background: $primary;
-    padding: 15px;
+.entrada {
+    display: inline-block;
+    color: $primary;
+    border: 1px solid $primary;
+    border-radius: 2px;
+    outline: none;
+    margin-bottom: 25px;
+    position: relative;
+    
+    input {
+        color: $primary;
+        border: none;
+        outline: none;
+        padding: 0;
+        margin: 0;
+        padding: 5px 40px;
+    }
+
+    .icono {
+        color: rgba(25,155,255,.5);
+        position: absolute;
+        top: 50%;
+        left: 15px;
+        transform: translateY(-50%);
+    }
 }
 
 // ─────────────── //
 //     LISTADO     //
 // ─────────────── //
-
-.buscador {
-    color: $primary;
-    border: 1px solid $primary;
-    border-radius: 2px;
-    outline: none;
-    padding: 5px 25px;
-    margin-bottom: 25px;
-}
 
 .elemento {
     display: flex;
@@ -104,7 +111,7 @@ footer {
     .ingles,
     .castellano {
         border: 1px solid $primary;
-        padding: 5px 25px;
+        padding: 5px 15px;
         width: 100%;
     }
     
@@ -120,4 +127,15 @@ footer {
         border-top-right-radius: 2px;
         border-bottom-right-radius: 2px;
     }
+}
+
+// ────────────── //
+//     FOOTER     //
+// ────────────── //
+
+footer {
+    color: white;
+    text-align: center;
+    background: $primary;
+    padding: 15px;
 }
