--- a/src/app/componentes/formulario/formulario.component.html
+++ b/src/app/componentes/formulario/formulario.component.html
@@ -1,32 +1,28 @@
-<div class="row animated fadeIn">
-  <div class="col">
-    <form #miFormulario="ngForm" (ngSubmit)="guardar( miFormulario )">
+<div class="animated fadeIn">
 
-      <!-- Firebase ID -->
-      <div class="form-group">
-        <label>Firebase ID</label>
-        <input type="text" class="form-control" disabled="disabled" placeholder="Firebase ID" [(ngModel)]="elemento.id" name="id">
-        <small class="form-text text-muted">Este campo se genera automáticamente</small>
-      </div>
+  <h1>Crear nuevo elemento</h1>
+  <hr>
 
-      <!-- Nombre -->
-      <div class="form-group">
-        <label>Traducción al español</label>
-        <input type="text" class="form-control" placeholder="Traducción al castellano" required [(ngModel)]="elemento.castellano" name="castellano">
-      </div>
+  <form class="formulario" #miFormulario="ngForm" (ngSubmit)="guardar( miFormulario )">
 
-      <!-- Poder -->
-      <div class="form-group">
-        <label>Traducción al inglés</label>
-        <input type="text" class="form-control" placeholder="Traducción al inglés" [(ngModel)]="elemento.ingles" name="ingles">
-      </div>
+    <!-- Firebase ID -->
+    <div class="entrada oculto">
+      <input type="text" disabled="disabled" placeholder="Firebase ID" [(ngModel)]="elemento.id" name="id">
+    </div>
 
-      <div class="form-group text-center">
-        <button type="submit" class="btn btn-primary w-25">
-          <i class="fa fa-save"></i>
-          Guardar
-        </button>
-      </div>
-    </form>
-  </div>
+    <!-- Traducción al inglés -->
+    <div class="entrada">
+      <input type="text" placeholder="Traducción al inglés" required [(ngModel)]="elemento.ingles" name="ingles" autocomplete="off">
+    </div>
+    
+    <!-- Traducción al castellano -->
+    <div class="entrada">
+      <input type="text" placeholder="Traducción al castellano" required [(ngModel)]="elemento.castellano" name="castellano" autocomplete="off">
+    </div>
+
+    <!-- Botón -->
+    <button type="submit" class="boton">
+      Guardar
+    </button>
+  </form>
 </div>
