--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,10 +9,13 @@ $laptop : 980px;
 $desktop: 1200px;
 
 // Placeholder
-
 ::-webkit-input-placeholder { color: rgba(25,155,255,.5) }
      :-ms-input-placeholder { color: rgba(25,155,255,.5) }
               ::placeholder { color: rgba(25,155,255,.5) }
+
+// Text selection
+::-moz-selection { color: white; background: $primary }
+     ::selection { color: white; background: $primary }
 
 // ─────────────── //
 //     GENERAL     //
@@ -40,6 +43,14 @@ hr {
     justify-content: space-between;
     flex-direction: column;
     min-height: 100vh;
+}
+
+// ───────────── //
+//     UTILS     //
+// ───────────── //
+
+.oculto {
+    display: none !important;
 }
 
 // ────────────── //
@@ -72,14 +83,23 @@ hr {
     }
 }
 
+// ────────────────── //
+//     FORMULARIO     //
+// ────────────────── //
+
+.formulario {
+    margin-top: 75px;
+}
+
 .entrada {
-    display: inline-block;
     color: $primary;
     border: 1px solid $primary;
     border-radius: 2px;
     outline: none;
-    margin-bottom: 25px;
+    margin: 0 auto 25px;
     position: relative;
+    width: 100%;
+    max-width: 400px;
     
     input {
         color: $primary;
@@ -87,7 +107,7 @@ hr {
         outline: none;
         padding: 0;
         margin: 0;
-        padding: 5px 40px;
+        padding: 10px 20px;
     }
 
     .icono {
@@ -99,9 +119,36 @@ hr {
     }
 }
 
+.boton {
+    display: block;
+    color: white;
+    background: $primary;
+    border: 1px solid $primary;
+    border-radius: 2px;
+    outline: none;
+    padding: 10px 20px;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 400px;
+    transition: .5s;
+
+    &:hover {
+        color: $primary;
+        background: white;
+    }
+}
+
 // ─────────────── //
 //     LISTADO     //
 // ─────────────── //
+
+.buscador {
+    display: inline-block;
+
+    input {
+        padding: 5px 40px;
+    }
+}
 
 .elemento {
     display: flex;
