[ General ] » Estilos actualizados

--- a/src/app/componentes/expresiones/expresiones.component.html
+++ b/src/app/componentes/expresiones/expresiones.component.html
@@ -16,7 +16,7 @@
         
         <div class="elemento" *ngFor="let expresion of expresiones; let i = index">
             <div class="ingles">{{ expresion.ingles }}</div>
-            <div class="castellano">{{ expresion.espanol }}</div>
+            <div class="castellano">{{ expresion.castellano }}</div>
         </div>
     </ng-container>
     
