--- a/src/app/componentes/frases/frases.component.html
+++ b/src/app/componentes/frases/frases.component.html
@@ -16,7 +16,7 @@
         
         <div class="elemento" *ngFor="let frase of frases; let i = index">
             <div class="ingles">{{ frase.ingles }}</div>
-            <div class="castellano">{{ frase.espanol }}</div>
+            <div class="castellano">{{ frase.castellano }}</div>
         </div>
     </ng-container>
 
