--- a/src/app/componentes/menu/menu.component.scss
+++ b/src/app/componentes/menu/menu.component.scss
@@ -26,7 +26,7 @@ $lightprimary: rgb(115,185,255);
             }
     
             &:hover a {
-                animation: meneo 1s infinite;
+                animation: meneo 1s;
             }
         }
     }
