--- a/src/app/componentes/palabras/palabras.component.html
+++ b/src/app/componentes/palabras/palabras.component.html
@@ -16,7 +16,7 @@
         
         <div class="elemento" *ngFor="let palabra of palabras; let i = index">
             <div class="ingles">{{ palabra.ingles }}</div>
-            <div class="castellano">{{ palabra.espanol }}</div>
+            <div class="castellano">{{ palabra.castellano }}</div>
         </div>
     </ng-container>
 
