[ Listado ] » Lógica del buscador implementada

--- a/src/app/componentes/listado/listado.component.html
+++ b/src/app/componentes/listado/listado.component.html
@@ -14,7 +14,7 @@
             <i class="icono fa fa-search" aria-hidden="true"></i>
         </div>
         
-        <div class="elemento" *ngFor="let item of items; let i = index">
+        <div class="elemento" *ngFor="let item of items">
             <div class="ingles">{{ item.ingles }}</div>
             <div class="castellano">{{ item.castellano }}</div>
         </div>
