[ Formulario ] » Estilos actualizados (selector)

--- a/src/app/componentes/formulario/formulario.component.html
+++ b/src/app/componentes/formulario/formulario.component.html
@@ -27,6 +27,7 @@
         <option value="frases">Frase</option>
         <option value="expresiones">Expresión</option>
       </select>
+      <i class="icono fa fa-angle-down" aria-hidden="true"></i>
     </div>
 
     <!-- Botón -->
