[ General ] » Estilos actualizados

--- a/src/app/componentes/listado/listado.component.html
+++ b/src/app/componentes/listado/listado.component.html
@@ -1,4 +1,4 @@
-<div class="animated fadeIn">
+<div class="animated fadeIn" style="margin: 50px 0">
 
     <h1>Listado de {{ categoria }}</h1>
     <hr>
@@ -40,6 +40,6 @@
 
     <!-- Nuevo -->
     <a class="nuevo" [routerLink]="['/formulario', 'crear', categoria, '']">
-        <i class="fa fa-plus" aria-hidden="true"></i>
+        <i class="icono fa fa-plus" aria-hidden="true"></i>
     </a>
 </div>
