--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,3 @@
-<div class="wrapper">
-    <div>
-        <app-menu></app-menu>
-        <div class="container">
-            <router-outlet></router-outlet>
-        </div>
-    </div>
-    <footer>Diccionario</footer>
+<div id="login">
+    <app-login></app-login>
 </div>
