--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -3,20 +3,20 @@
     <form class="formulario" #formularioLogin="ngForm" (ngSubmit)="onSubmit( formularioLogin )">
 
         <!-- Email -->
-        <div class="entrada">
+        <div class="entrada email">
             <small *ngIf="formularioLogin.submitted && formularioLogin.controls['email'].errors" class="validacion animated fadeIn text-danger text-left">Este campo es obligatorio</small>
             <input type="email" email placeholder="Email" required [(ngModel)]="usuario.email" name="email" autocomplete="off">
         </div>
 
         <!-- Contraseña -->
-        <div class="entrada">
+        <div class="entrada clave">
             <small *ngIf="formularioLogin.submitted && formularioLogin.controls['clave'].errors" class="validacion animated fadeIn text-danger text-left">Este campo es obligatorio</small>
             <input type="password" placeholder="Contraseña" required [(ngModel)]="usuario.clave" name="clave" autocomplete="off">
         </div>
 
         <!-- Botón -->
         <button type="submit" class="boton">
-            Enviar
+            <i class="fa fa-paper-plane" aria-hidden="true"></i>
         </button>
     </form>
 </div>
